manifests/quake/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: quake
  name: quake
  namespace: quake
spec:
  type: NodePort
  selector:
    run: quake
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
      name: client
    - port: 27960
      targetPort: 27960
      nodePort: 30003
      name: server
    - port: 9090
      targetPort: 9090
      nodePort: 30002
      name: content
