manifests/quake/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-live
  labels:
    run: quake
  name: quake
  namespace: quake
spec:
  ingressClassName: traefik
  rules:
  - host: quake.apps.blah.cloud
    http:
      paths:
      - backend:
          service:
            name: quake
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - quake.apps.blah.cloud
    secretName: quake-cert
